# SpeedcubeTimer

./: Makefile  README.md  gtk.timer.speedcube.json  main  main.c  meson.build  sct.c  sct.gresource.xml  sct.ui  timer.c  timer.h
data/: gtk.timer.speedcube.desktop.in  gtk.timer.speedcube.gschema.xml  gtk.timer.speedcube.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  speedcubetimer-application.c  speedcubetimer-application.h  speedcubetimer-window.c  speedcubetimer-window.h  speedcubetimer-window.old.ui  speedcubetimer-window.ui  speedcubetimer.gresource.xml  style.css  timer.c  timer.h
